[gd_scene load_steps=14 format=3 uid="uid://b418v4wrj7b51"]

[ext_resource type="Script" path="res://scenes/House/MCbedroom.gd" id="1_3l5dn"]
[ext_resource type="Texture2D" uid="uid://dwffu3irhwwp0" path="res://assets/sprites/House/MCbedroom/house.png" id="2_gu1a3"]
[ext_resource type="Texture2D" uid="uid://chj5b6x4ru5bl" path="res://assets/sprites/House/MCbedroom/door_anim.png" id="3_5b718"]
[ext_resource type="PackedScene" uid="uid://sndhm53bfar" path="res://scenes/Player/player.tscn" id="4_y5d7a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p0rxb"]
texture = ExtResource("2_gu1a3")
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -1)
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, 6)
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14, 10, 16, 10, 16, -22, -14, -22)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, 20)
1:3/0/y_sort_origin = -20
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -4, 16, -4, 16, -36, -16, -36)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(-14, 8)
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -2)
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/texture_origin = Vector2i(-16, 3)
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -6, 0, 14, 34, 14, 34, -6)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(-18, 8)
0:5/0/y_sort_origin = -20
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 14, -8, 14, -20, 4, -20)
0:6/0 = 0
0:6/0/texture_origin = Vector2i(0, 20)
0:6/0/y_sort_origin = -20
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -4, -16, -36, 12, -36, 12, -4)
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/texture_origin = Vector2i(-3, 3)
2:6/0/y_sort_origin = -3
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(14, 0, 12, -2, 6, 0, 0, 0, -6, -2, -8, 0, -4, 4, -2, 6, -2, 12, 2, 14, 4, 14, 8, 12, 8, 6, 10, 4)
3:6/0 = 0
3:6/0/texture_origin = Vector2i(0, 40)
3:6/0/y_sort_origin = -40
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -26, 0, -24, 8, -26, 8, -38, 0, -42, -8, -38)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, 20)
2:3/0/y_sort_origin = -20
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(18, -4, -16, -4, -16, -22, 18, -22)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
2:4/size_in_atlas = Vector2i(2, 2)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(-16, -4)
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_326cw"]
texture = ExtResource("3_5b718")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_mw0dx"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_p0rxb")
sources/3 = SubResource("TileSetAtlasSource_326cw")

[sub_resource type="AtlasTexture" id="AtlasTexture_s2l2q"]
atlas = ExtResource("3_5b718")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkw0w"]
atlas = ExtResource("3_5b718")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyh7p"]
atlas = ExtResource("3_5b718")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mpqt"]
atlas = ExtResource("3_5b718")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_exohm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2l2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkw0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyh7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mpqt")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yeknn"]
a = Vector2(-1, 1)
b = Vector2(13, 1)

[node name="MCbedroom" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_3l5dn")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(-32, 0)
tile_set = SubResource("TileSet_mw0dx")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(2, 196609, 2, 3, 65537, 6, 5, 196609, 2, 6, 196609, 3, 7, 196609, 2, 1, 196609, 2, 8, 131073, 2, 65544, 131073, 2, 196616, 131073, 2, 262152, 131073, 2, -262136, 131073, 2, -196600, 131073, 2, -131064, 131073, 2, -65528, 131073, 2, 327688, 131073, 2, 393224, 131073, 2, 458760, 131073, 2, 524296, 131073, 2, -262135, 131073, 2, -196599, 131073, 2, -131063, 131073, 2, -65527, 131073, 2, 9, 131073, 2, 65545, 131073, 2, 131081, 131073, 2, 196617, 131073, 2, 262153, 131073, 2, 327689, 131073, 2, 393225, 131073, 2, 458761, 131073, 2, 524297, 131073, 2, -262134, 131073, 2, -196598, 131073, 2, -131062, 131073, 2, -65526, 131073, 2, 10, 131073, 2, 65546, 131073, 2, 131082, 131073, 2, 196618, 131073, 2, 262154, 131073, 2, 327690, 131073, 2, 393226, 131073, 2, 458762, 131073, 2, 524298, 131073, 2, -262133, 131073, 2, -196597, 131073, 2, -131061, 131073, 2, -65525, 131073, 2, 11, 131073, 2, 65547, 131073, 2, 131083, 131073, 2, 196619, 131073, 2, 262155, 131073, 2, 327691, 131073, 2, 393227, 131073, 2, 458763, 131073, 2, 524299, 131073, 2, -262132, 131073, 2, -196596, 131073, 2, -131060, 131073, 2, -65524, 131073, 2, 12, 131073, 2, 65548, 131073, 2, 131084, 131073, 2, 196620, 131073, 2, 262156, 131073, 2, 327692, 131073, 2, 393228, 131073, 2, 458764, 131073, 2, 524300, 131073, 2, -262131, 131073, 2, -196595, 131073, 2, -131059, 131073, 2, -65523, 131073, 2, 13, 131073, 2, 65549, 131073, 2, 131085, 131073, 2, 196621, 131073, 2, 262157, 131073, 2, 327693, 131073, 2, 393229, 131073, 2, 458765, 131073, 2, 524301, 131073, 2, -262130, 131073, 2, -196594, 131073, 2, -131058, 131073, 2, -65522, 131073, 2, 14, 131073, 2, 65550, 131073, 2, 131086, 131073, 2, 196622, 131073, 2, 262158, 131073, 2, 327694, 131073, 2, 393230, 131073, 2, 458766, 131073, 2, 524302, 131073, 2, 327677, 131073, 2, 393213, 131073, 2, 458749, 131073, 2, 524285, 131073, 2, 589821, 131073, 2, 655357, 131073, 2, 393214, 131073, 2, 458750, 131073, 2, 524286, 131073, 2, 589822, 131073, 2, 655358, 131073, 2, 393215, 131073, 2, 458751, 131073, 2, 524287, 131073, 2, 589823, 131073, 2, 655359, 131073, 2, 327680, 131073, 2, 393216, 131073, 2, 458752, 131073, 2, 524288, 131073, 2, 589824, 131073, 2, 327681, 131073, 2, 393217, 131073, 2, 458753, 131073, 2, 524289, 131073, 2, 589825, 131073, 2, 327682, 131073, 2, 393218, 131073, 2, 458754, 131073, 2, 524290, 131073, 2, 589826, 131073, 2, 327683, 131073, 2, 393219, 131073, 2, 458755, 131073, 2, 524291, 131073, 2, 589827, 131073, 2, 327684, 131073, 2, 393220, 131073, 2, 458756, 131073, 2, 524292, 131073, 2, 589828, 131073, 2, 327685, 131073, 2, 393221, 131073, 2, 458757, 131073, 2, 524293, 131073, 2, 589829, 131073, 2, 393222, 131073, 2, 458758, 131073, 2, 524294, 131073, 2, 589830, 131073, 2, 393223, 131073, 2, 458759, 131073, 2, 524295, 131073, 2, 589831, 131073, 2, 589832, 131073, 2, 589833, 131073, 2, 589834, 131073, 2, 589835, 131073, 2, 589836, 131073, 2, 589837, 131073, 2, 589838, 131073, 2, 327695, 131073, 2, 393231, 131073, 2, 458767, 131073, 2, 524303, 131073, 2, 589839, 131073, 2, 327696, 131073, 2, 393232, 131073, 2, 458768, 131073, 2, 524304, 131073, 2, 589840, 131073, 2, -327683, 131073, 2, -262147, 131073, 2, -196611, 131073, 2, -131075, 131073, 2, -65539, 131073, 2, -3, 131073, 2, 65533, 131073, 2, 131069, 131073, 2, 196605, 131073, 2, 262141, 131073, 2, -327682, 131073, 2, -262146, 131073, 2, -196610, 131073, 2, -131074, 131073, 2, -65538, 131073, 2, -2, 131073, 2, 65534, 131073, 2, 131070, 131073, 2, 196606, 131073, 2, 262142, 131073, 2, 327678, 131073, 2, -327681, 131073, 2, -262145, 131073, 2, -196609, 131073, 2, -131073, 131073, 2, -65537, 131073, 2, -1, 131073, 2, 65535, 131073, 2, 131071, 131073, 2, 196607, 131073, 2, 262143, 131073, 2, 327679, 131073, 2, -393216, 131073, 2, -327680, 131073, 2, -262144, 131073, 2, -196608, 131073, 2, -131072, 131073, 2, -65536, 131073, 2, 0, 131073, 2, 65536, 131073, 2, 131072, 131073, 2, 196608, 131073, 2, 262144, 131073, 2, -65535, 131073, 2, -65534, 131073, 2, -65533, 131073, 2, -65532, 131073, 2, -65531, 131073, 2, -65530, 131073, 2, -65529, 131073, 2, -65521, 131073, 2, -65520, 131073, 2, -65519, 131073, 2, -65518, 131073, 2, -65517, 131073, 2, -65516, 131073, 2, -131057, 131073, 2, 15, 131073, 2, 65551, 131073, 2, 131087, 131073, 2, 196623, 131073, 2, 262159, 131073, 2, -131056, 131073, 2, 16, 131073, 2, 65552, 131073, 2, 131088, 131073, 2, 196624, 131073, 2, 262160, 131073, 2, -131055, 131073, 2, 17, 131073, 2, 65553, 131073, 2, 131089, 131073, 2, 196625, 131073, 2, 262161, 131073, 2, 327697, 131073, 2, 393233, 131073, 2, 458769, 131073, 2, 524305, 131073, 2, 589841, 131073, 2, -131054, 131073, 2, 18, 131073, 2, 65554, 131073, 2, 131090, 131073, 2, 196626, 131073, 2, 262162, 131073, 2, 327698, 131073, 2, 393234, 131073, 2, 458770, 131073, 2, 524306, 131073, 2, 589842, 131073, 2, -131053, 131073, 2, 19, 131073, 2, 65555, 131073, 2, 131091, 131073, 2, 196627, 131073, 2, 262163, 131073, 2, 327699, 131073, 2, 393235, 131073, 2, 458771, 131073, 2, 524307, 131073, 2, 589843, 131073, 2, -131052, 131073, 2, 20, 131073, 2, 65556, 131073, 2, 131092, 131073, 2, 196628, 131073, 2, 262164, 131073, 2, 327700, 131073, 2, 393236, 131073, 2, 458772, 131073, 2, 524308, 131073, 2, 589844, 131073, 2, -327690, 131073, 2, -262154, 131073, 2, -196618, 131073, 2, -131082, 131073, 2, -65546, 131073, 2, -10, 131073, 2, 65526, 131073, 2, 131062, 131073, 2, 196598, 131073, 2, 262134, 131073, 2, 327670, 131073, 2, 393206, 131073, 2, 458742, 131073, 2, 524278, 131073, 2, 589814, 131073, 2, 655350, 131073, 2, -327689, 131073, 2, -262153, 131073, 2, -196617, 131073, 2, -131081, 131073, 2, -65545, 131073, 2, -9, 131073, 2, 65527, 131073, 2, 131063, 131073, 2, 196599, 131073, 2, 262135, 131073, 2, 327671, 131073, 2, 393207, 131073, 2, 458743, 131073, 2, 524279, 131073, 2, 589815, 131073, 2, 655351, 131073, 2, -327688, 131073, 2, -262152, 131073, 2, -196616, 131073, 2, -131080, 131073, 2, -65544, 131073, 2, -8, 131073, 2, 65528, 131073, 2, 131064, 131073, 2, 196600, 131073, 2, 262136, 131073, 2, 327672, 131073, 2, 393208, 131073, 2, 458744, 131073, 2, 524280, 131073, 2, 589816, 131073, 2, 655352, 131073, 2, -327687, 131073, 2, -262151, 131073, 2, -196615, 131073, 2, -131079, 131073, 2, -65543, 131073, 2, -7, 131073, 2, 65529, 131073, 2, 131065, 131073, 2, 196601, 131073, 2, 262137, 131073, 2, 327673, 131073, 2, 393209, 131073, 2, 458745, 131073, 2, 524281, 131073, 2, 589817, 131073, 2, 655353, 131073, 2, -327686, 131073, 2, -262150, 131073, 2, -196614, 131073, 2, -131078, 131073, 2, -65542, 131073, 2, -6, 131073, 2, 65530, 131073, 2, 131066, 131073, 2, 196602, 131073, 2, 262138, 131073, 2, 327674, 131073, 2, 393210, 131073, 2, 458746, 131073, 2, 524282, 131073, 2, 589818, 131073, 2, 655354, 131073, 2, -327685, 131073, 2, -262149, 131073, 2, -196613, 131073, 2, -131077, 131073, 2, -65541, 131073, 2, -5, 131073, 2, 65531, 131073, 2, 131067, 131073, 2, 196603, 131073, 2, 262139, 131073, 2, 327675, 131073, 2, 393211, 131073, 2, 458747, 131073, 2, 524283, 131073, 2, 589819, 131073, 2, 655355, 131073, 2, -327684, 131073, 2, -262148, 131073, 2, -196612, 131073, 2, -131076, 131073, 2, -65540, 131073, 2, -4, 131073, 2, 65532, 131073, 2, 131068, 131073, 2, 196604, 131073, 2, 262140, 131073, 2, 327676, 131073, 2, 393212, 131073, 2, 458748, 131073, 2, 524284, 131073, 2, 589820, 131073, 2, 655356, 131073, 2, -524298, 131073, 2, -458762, 131073, 2, -393226, 131073, 2, -524297, 131073, 2, -458761, 131073, 2, -393225, 131073, 2, -524296, 131073, 2, -458760, 131073, 2, -393224, 131073, 2, -524295, 131073, 2, -458759, 131073, 2, -393223, 131073, 2, -524294, 131073, 2, -458758, 131073, 2, -393222, 131073, 2, -524293, 131073, 2, -458757, 131073, 2, -393221, 131073, 2, -524292, 131073, 2, -458756, 131073, 2, -393220, 131073, 2, -524291, 131073, 2, -458755, 131073, 2, -393219, 131073, 2, -524290, 131073, 2, -458754, 131073, 2, -393218, 131073, 2, -524289, 131073, 2, -458753, 131073, 2, -393217, 131073, 2, -589824, 131073, 2, -524288, 131073, 2, -458752, 131073, 2, -589823, 131073, 2, -524287, 131073, 2, -458751, 131073, 2, -393215, 131073, 2, -327679, 131073, 2, -262143, 131073, 2, -196607, 131073, 2, -131071, 131073, 2, -589822, 131073, 2, -524286, 131073, 2, -458750, 131073, 2, -393214, 131073, 2, -327678, 131073, 2, -262142, 131073, 2, -196606, 131073, 2, -131070, 131073, 2, -589821, 131073, 2, -524285, 131073, 2, -458749, 131073, 2, -393213, 131073, 2, -327677, 131073, 2, -262141, 131073, 2, -196605, 131073, 2, -131069, 131073, 2, -589820, 131073, 2, -524284, 131073, 2, -458748, 131073, 2, -393212, 131073, 2, -327676, 131073, 2, -262140, 131073, 2, -196604, 131073, 2, -131068, 131073, 2, -589819, 131073, 2, -524283, 131073, 2, -458747, 131073, 2, -393211, 131073, 2, -327675, 131073, 2, -262139, 131073, 2, -196603, 131073, 2, -131067, 131073, 2, -589818, 131073, 2, -524282, 131073, 2, -458746, 131073, 2, -393210, 131073, 2, -327674, 131073, 2, -262138, 131073, 2, -196602, 131073, 2, -131066, 131073, 2, -589817, 131073, 2, -524281, 131073, 2, -458745, 131073, 2, -393209, 131073, 2, -327673, 131073, 2, -262137, 131073, 2, -196601, 131073, 2, -131065, 131073, 2, -589816, 131073, 2, -524280, 131073, 2, -458744, 131073, 2, -393208, 131073, 2, -327672, 131073, 2, -589815, 131073, 2, -524279, 131073, 2, -458743, 131073, 2, -393207, 131073, 2, -327671, 131073, 2, -589814, 131073, 2, -524278, 131073, 2, -458742, 131073, 2, -393206, 131073, 2, -327670, 131073, 2, -589813, 131073, 2, -524277, 131073, 2, -458741, 131073, 2, -393205, 131073, 2, -327669, 131073, 2, -589812, 131073, 2, -524276, 131073, 2, -458740, 131073, 2, -393204, 131073, 2, -327668, 131073, 2, -589811, 131073, 2, -524275, 131073, 2, -458739, 131073, 2, -393203, 131073, 2, -327667, 131073, 2, -589810, 131073, 2, -524274, 131073, 2, -458738, 131073, 2, -393202, 131073, 2, -327666, 131073, 2, -589809, 131073, 2, -524273, 131073, 2, -458737, 131073, 2, -393201, 131073, 2, -327665, 131073, 2, -262129, 131073, 2, -196593, 131073, 2, -589808, 131073, 2, -524272, 131073, 2, -458736, 131073, 2, -393200, 131073, 2, -327664, 131073, 2, -262128, 131073, 2, -196592, 131073, 2, -589807, 131073, 2, -524271, 131073, 2, -458735, 131073, 2, -393199, 131073, 2, -327663, 131073, 2, -262127, 131073, 2, -196591, 131073, 2, -589806, 131073, 2, -524270, 131073, 2, -458734, 131073, 2, -393198, 131073, 2, -327662, 131073, 2, -262126, 131073, 2, -196590, 131073, 2, -589805, 131073, 2, -524269, 131073, 2, -458733, 131073, 2, -393197, 131073, 2, -327661, 131073, 2, -262125, 131073, 2, -196589, 131073, 2, -589804, 131073, 2, -524268, 131073, 2, -458732, 131073, 2, -393196, 131073, 2, -327660, 131073, 2, -262124, 131073, 2, -196588, 131073, 2, -589803, 131073, 2, -524267, 131073, 2, -458731, 131073, 2, -393195, 131073, 2, -327659, 131073, 2, -262123, 131073, 2, -196587, 131073, 2, -131051, 131073, 2, -65515, 131073, 2, 21, 131073, 2, 65557, 131073, 2, 131093, 131073, 2, 196629, 131073, 2, 262165, 131073, 2, 327701, 131073, 2, 393237, 131073, 2, 458773, 131073, 2, 524309, 131073, 2, 589845, 131073, 2, 720886, 131073, 2, 786422, 131073, 2, 851958, 131073, 2, 720887, 131073, 2, 786423, 131073, 2, 851959, 131073, 2, 720888, 131073, 2, 786424, 131073, 2, 851960, 131073, 2, 720889, 131073, 2, 786425, 131073, 2, 851961, 131073, 2, 720890, 131073, 2, 786426, 131073, 2, 851962, 131073, 2, 720891, 131073, 2, 786427, 131073, 2, 851963, 131073, 2, 720892, 131073, 2, 786428, 131073, 2, 851964, 131073, 2, 720893, 131073, 2, 786429, 131073, 2, 851965, 131073, 2, 720894, 131073, 2, 786430, 131073, 2, 851966, 131073, 2, 720895, 131073, 2, 786431, 131073, 2, 851967, 131073, 2, 655360, 131073, 2, 720896, 131073, 2, 786432, 131073, 2, 655361, 131073, 2, 720897, 131073, 2, 786433, 131073, 2, 655362, 131073, 2, 720898, 131073, 2, 786434, 131073, 2, 655363, 131073, 2, 720899, 131073, 2, 786435, 131073, 2, 655364, 131073, 2, 720900, 131073, 2, 786436, 131073, 2, 655365, 131073, 2, 720901, 131073, 2, 786437, 131073, 2, 655366, 131073, 2, 720902, 131073, 2, 786438, 131073, 2, 655367, 131073, 2, 720903, 131073, 2, 786439, 131073, 2, 655368, 131073, 2, 720904, 131073, 2, 786440, 131073, 2, 655369, 131073, 2, 720905, 131073, 2, 786441, 131073, 2, 655370, 131073, 2, 720906, 131073, 2, 786442, 131073, 2, 655371, 131073, 2, 720907, 131073, 2, 786443, 131073, 2, 655372, 131073, 2, 720908, 131073, 2, 786444, 131073, 2, 655373, 131073, 2, 720909, 131073, 2, 786445, 131073, 2, 655374, 131073, 2, 720910, 131073, 2, 786446, 131073, 2, 655375, 131073, 2, 720911, 131073, 2, 786447, 131073, 2, 655376, 131073, 2, 720912, 131073, 2, 786448, 131073, 2, 655377, 131073, 2, 720913, 131073, 2, 786449, 131073, 2, 655378, 131073, 2, 720914, 131073, 2, 786450, 131073, 2, 655379, 131073, 2, 720915, 131073, 2, 786451, 131073, 2, 655380, 131073, 2, 720916, 131073, 2, 786452, 131073, 2, 655381, 131073, 2, 720917, 131073, 2, 786453, 131073, 2, 131074, 1, 2, 131073, 196609, 268435457, 65537, 196609, 268435457, 65538, 65537, 2, 65539, 65537, 2, 131076, 1, 2, 131077, 1, 2, 65542, 65537, 2, 65543, 196609, 1, 65541, 65537, 2, 131075, 1, 2, 131078, 1, 2, 131079, 65537, 1, 131080, 131073, 2, 196615, 65537, 1, 196614, 1, 2, 262150, 1, 1, 262149, 1, 1, 196613, 1, 2, 327686, 131073, 2, 327687, 131073, 2, 262151, 131073, 1, 196611, 1, 2, 262147, 1, 1, 262148, 1, 1, 196612, 1, 2, 262146, 1, 1, 196609, 196609, 268435457, 262145, 65537, 268435456, 65540, 65537, 2, 196610, 1, 2, 4, 131073, 2)
layer_1/name = "carpet"
layer_1/tile_data = PackedInt32Array(196610, 131073, 4, 65541, 1, 4, 65540, 65537, 4)
layer_2/name = "items"
layer_2/y_sort_enabled = true
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(65542, 1, 3, 65538, 131073, 3, 196610, 65537, 5, 131074, 196609, 6, 262151, 131073, 6, 65543, 1, 6, 65541, 1, 5, 65537, 65537, 3)

[node name="Player" parent="." instance=ExtResource("4_y5d7a")]
position = Vector2(119, 73)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(86, -11)
zoom = Vector2(1.425, 1.425)
limit_left = 0
limit_top = 0
limit_right = 224
limit_bottom = 160

[node name="door" type="AnimatedSprite2D" parent="."]
position = Vector2(112, 16)
sprite_frames = SubResource("SpriteFrames_exohm")
animation = &"open"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(106, 32)
shape = SubResource("SegmentShape2D_yeknn")

[node name="door_pos" type="Marker2D" parent="."]
position = Vector2(112, 36)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="animation_finished" from="door" to="." method="_on_door_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
